--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-/*
-.masthead {
-    height: 100vh;
-    min-height: 500px;
-    background-image: url(img/2.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
- */
 
 .navbar{ background:#F97300;
 }
@@ -22,10 +12,24 @@
 
 .navbar-toggler{  background:#fff !important;}
 
+
+
+  /*header style*/
+  .header {
+    padding-top: 15rem;
+    padding-bottom: 7rem;
+    background: url(../img/2.jpg) center center no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+   }
+
 .description{
     position: absolute;
+    left: 60px;
     top: 30%;
     margin: auto;
+    border: 3px solid #080807;
     padding: 2em;
 }
 .description h1{
@@ -44,25 +48,19 @@
     color:#fff;
    }
 
-   /*header style*/
-.header{
-    background-image: url('../img/2.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-   }
+ 
 
-.overlay{
+/* .overlay{
     position: absolute;
     min-height: 100%;
     min-width: 100%;
     left: 0;
     top: 0;
     background: rgba(244, 244, 244, 0.79);
-   }
+   } */
 
 
-}
+/* }
 .about{
 	margin: 4em 0;
 	padding: 1em;
@@ -93,15 +91,17 @@
 .about .desc p{
 	line-height:2;
 	color:#888;
-}
+} */
 
 
 /*blog style*/
 
 .blog{
 	margin: 4em 0;
-	position: relative;	
-}
+	position: relative;	 */
+} 
+
+
 .blog h1{
 	color:#F97300;
 	margin: 2em;	
@@ -124,20 +124,8 @@
 }
 .blog .card-body{
 	padding: 1em;
-}
+} 
 
-.list-team-members ul li {
-    background-color: #f2f2f2;
-    padding: 5px;
-    border-radius: 4px;
-    transition: .3s all ease-in-out;
-    -webkit-transition: .3s all ease-in-out;
-  }
-  
-  .list-team-members ul li:hover {
-    background-color: rgb(34, 30, 30);
-    color: #fff !important;
-  }
 
   .section{
     background-color: #F97300;
